--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ leptos_meta = { version = "0.8.5" }
 leptos_actix = { version = "0.8.6", optional = true }
 leptos_router = { version = "0.8.9" }
 wasm-bindgen = "=0.2.105"
-web-sys = "0.3.82"
+web-sys = { version = "0.3.82", features = ["HtmlCanvasElement", "HtmlImageElement", "Window", "Performance", "WebGlRenderingContext", "WebGlProgram", "WebGlShader", "WebGlTexture", "WebGlBuffer", "WebGlUniformLocation", "Element", "HtmlElement", "CssStyleDeclaration"] }
 leptos-use = "0.16.3"
 uuid = { version = "1.18.1", features = ["js"] }
-
+js-sys = "0.3.82"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 rand = "0.9.2"
 moka = { version = "0.12.11", features = ["sync"] }
