--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,31 +10,23 @@ crate-type = ["cdylib", "rlib"]
 actix-files = { version = "0.6", optional = true }
 actix-web = { version = "4", optional = true, features = ["macros"] }
 console_error_panic_hook = "0.1"
-http = { version = "1.4.0", optional = true }
-leptos = { version = "0.8.14" }
+http = { version = "1.3.1", optional = true }
+leptos = { version = "0.8.12" }
 leptos_meta = { version = "0.8.5" }
 leptos_actix = { version = "0.8.6", optional = true }
-leptos_router = { version = "0.8.10" }
+leptos_router = { version = "0.8.9" }
+wasm-bindgen = "=0.2.105"
 web-sys = { version = "0.3.82", features = ["HtmlCanvasElement", "HtmlImageElement", "Window", "Performance", "WebGlRenderingContext", "WebGlProgram", "WebGlShader", "WebGlTexture", "WebGlBuffer", "WebGlUniformLocation", "Element", "HtmlElement", "CssStyleDeclaration"] }
 leptos-use = "0.16.3"
 uuid = { version = "1.18.1", features = ["js"] }
 js-sys = "0.3.82"
-wasm-bindgen = "=0.2.105" 
-log = "0.4.28"
-
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-awc = { version = "3.8.1", features = ["openssl"], optional = true }
-futures-util = { version = "0.3.31", optional = true }
-tokio = { version = "1.48.0", features = ["full"], optional = true }
-url = { version = "2.5.7", optional = true }
-env_logger = "0.11.8"
 rand = "0.9.2"
 moka = { version = "0.12.11", features = ["sync"] }
 image = { version = "0.25.9", features = ["jpeg", "webp", "avif-native"] }
 once_cell = "1.21.3"
 tempfile = "3.23.0"
-# Add futures for StreamExt
-futures = "0.3" 
+
 
 [features]
 csr = ["leptos/csr"]
@@ -47,8 +39,8 @@ ssr = [
   "leptos_meta/ssr",
   "leptos_router/ssr",
 ]
-gateway_lb = ["ssr", "dep:awc", "dep:futures-util", "dep:tokio", "dep:url"]
 
+# Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
 inherits = "release"
 opt-level = 'z'
@@ -57,19 +49,54 @@ codegen-units = 1
 panic = "abort"
 
 [package.metadata.leptos]
+# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
 output-name = "camaracapoeira"
+# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
 site-root = "target/site"
+# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
+# Defaults to pkg
 site-pkg-dir = "pkg"
+# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
 style-file = "style/main.scss"
+# Assets source dir. All files found here will be copied and synchronized to site-root.
+# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
+#
+# Optional. Env: LEPTOS_ASSETS_DIR.
 assets-dir = "assets"
-site-addr = "0.0.0.0:3020"
-reload-port = 3023
+# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
+site-addr = "0.0.0.0:3000"
+# The port to use for automatic reload monitoring
+reload-port = 3001
+# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
+#   [Windows] for non-WSL use "npx.cmd playwright test"
+#   This binary name can be checked in Powershell with Get-Command npx
 end2end-cmd = "npx playwright test"
 end2end-dir = "end2end"
+#  The browserlist query used for optimizing the CSS.
 browserquery = "defaults"
+# The environment Leptos will run in, usually either "DEV" or "PROD"
 env = "DEV"
+# The features to use when compiling the bin target
+#
+# Optional. Can be over-ridden with the command line parameter --bin-features
 bin-features = ["ssr"]
+
+# If the --no-default-features flag should be used when compiling the bin target
+#
+# Optional. Defaults to false.
 bin-default-features = false
+
+# The features to use when compiling the lib target
+#
+# Optional. Can be over-ridden with the command line parameter --lib-features
 lib-features = ["hydrate"]
+
+# If the --no-default-features flag should be used when compiling the lib target
+#
+# Optional. Defaults to false.
 lib-default-features = false
+
+# The profile to use for the lib target when compiling for release
+#
+# Optional. Defaults to "release".
 lib-profile-release = "wasm-release"
